<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
    >

    <string name="app_name">Just Java</string>
    <string name="hint_name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>

    <string name="thank_you">Thank You</string>

    <string name="order_summary_name">"Name: "</string>
    <string name="add_whipped_cream">Add whipped cream?</string>
    <string name="add_chocolate">Add chocolate?</string>
    <string name="total">Total: $</string>
    <string name="just_juvu_to">Just Java to abusoid</string>
</resources>
